--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                  <p class="subscribe-text">Get our daily updates by subscribing to our newspaper, please drop your email below</p>
                  <form action="#">
                      <input type="text" placeholder="Enter your email addres">
-                     <button type="submit"><i class="fa-solid fa-paper-plane"></i></i>Subscribe</button>
+                     <button type="submit"><i class="fa-solid fa-paper-plane"></i>Subscribe</button>
                  </form>
              </div>
          </div>
