--- a/index.html
+++ b/index.html
@@ -263,7 +263,55 @@
      </main>
      <footer class="footer">
          <div class="footer__container">
+             <ul class="foot-column">
+                <li><img src="images/EFood.svg" alt="" class="logo"></li>
+                <li><a href="#"> <i class="fa-solid fa-location-dot"></i>  Dhaka, Bangladesh</a></li>
+                <li><a href="tel:+374943833399"><i class="fa-solid fa-phone-volume"></i>0943833399</a></li>
+                <li><a href="mailto:support@efood.com"> <i class="fa-regular fa-envelope"></i> support@efood.com</a></li>
+                <li><i class="fa-brands fa-facebook-f"></i> <i class="fa-brands fa-twitter"></i> <i class="fa-brands fa-instagram"></i> <i class="fa-brands fa-pinterest-p"></i></li>
+             </ul>
+             <ul class="foot-column">
+                 <li>Service</li>
+                 <li><a href="#">How it works</a></li>
+                 <li><a href="#">Home delivery</a></li>
+                 <li><a href="#">Prducts</a></li>
+                 <li><a href="#">Menu</a></li>
+             </ul>
 
+             <ul class="foot-column">
+                 <li>Company</li>
+                 <li><a href="#">About Us</a></li>
+                 <li><a href="#">News</a></li>
+                 <li><a href="#">Our trusted partner</a></li>
+                 <li><a href="#">New users FAQ</a></li>
+             </ul>
+
+             <ul class="foot-column">
+                 <li>Supports</li>
+                 <li><a href="#">Help center</a></li>
+                 <li><a href="#">Feedbcak</a></li>
+                 <li><a href="#">Contact us</a></li>
+                 <li><a href="#">Terms conditins</a></li>
+             </ul>
+             <ul class="foot-column">
+                 <li>Resources</li>
+                 <li><a href="#">Download app</a></li>
+                 <li><a href="#">Blog</a></li>
+                 <li><a href="#">What’s new</a></li>
+                 <li><a href="#"> Sitemap</a></li>
+             </ul>
+
+         </div>
+         <hr>
+         <div class="copy">
+             <div class="copy__container">
+             <p>© 2021 EFood - All rights reserved.</p>
+             <ul class="copy-right-side">
+                 <li>Privacy</li>
+                 <li>Security</li>
+                 <li>Terms</li>
+             </ul>
+         </div>
          </div>
      </footer>
  </div>
