--- a/index.html
+++ b/index.html
@@ -244,8 +244,8 @@
                  <div class="saying-block">
                  <img src="images/Rectangle-8.png" alt="" class="saying-img">
                      <div class="client-says-right">
-                         <div class="saying-text">EFood has the most intriguing food order system in the country. UI in both their app and web Is very simple and easy to use, enhancing the UX. Their delivery men are also quite professional and knows the neighborhood well.
-                             Till now I never had to guide them to my address for delivery; </div>
+                         <p class="saying-text">EFood has the most intriguing food order system in the country. UI in both their app and web Is very simple and easy to use, enhancing the UX. Their delivery men are also quite professional and knows the neighborhood well.
+                             Till now I never had to guide them to my address for delivery; </p>
                      </div>
                  </div>
              </div>
